--- a/EvaluacionProveedores/src/View/EvaluarProveedor.form
+++ b/EvaluacionProveedores/src/View/EvaluarProveedor.form
@@ -224,6 +224,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="calidadProductosTextField">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="calidadProductosTextFieldActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="fiabilidadEntregaTextField">
         </Component>
