Control e interfaz EvaluarProveedor

--- a/EvaluacionProveedores/src/View/EvaluarProveedor.form
+++ b/EvaluacionProveedores/src/View/EvaluarProveedor.form
@@ -36,10 +36,8 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="evaluacionPanel" alignment="0" max="32767" attributes="1"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="nombreProveedorTextField" min="-2" pref="139" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="nombreProductoTextField" min="-2" pref="71" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="nitProveedorTextField" min="-2" pref="139" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
                               <Component id="Buscar" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -56,8 +54,7 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="nombreProveedorTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="nombreProductoTextField" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                  <Component id="nitProveedorTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="Buscar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
@@ -73,22 +70,12 @@
         <Property name="text" type="java.lang.String" value="Evaluar Proveedor"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="nombreProveedorTextField">
+    <Component class="javax.swing.JTextField" name="nitProveedorTextField">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nombre del Proveedor"/>
+        <Property name="text" type="java.lang.String" value="NIT proveedor"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nombreProveedorTextFieldMouseClicked"/>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreProveedorTextFieldActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JTextField" name="nombreProductoTextField">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Producto"/>
-      </Properties>
-      <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nombreProductoTextFieldMouseClicked"/>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreProductoTextFieldActionPerformed"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nitProveedorTextFieldMouseClicked"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Buscar">
@@ -96,7 +83,6 @@
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="BuscarMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BuscarActionPerformed"/>
       </Events>
     </Component>
@@ -224,9 +210,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="calidadProductosTextField">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="calidadProductosTextFieldActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="fiabilidadEntregaTextField">
         </Component>
@@ -252,9 +235,6 @@
               </StringArray>
             </Property>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cercaniaGeograficaSeleccionActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="adaptabilidadSeleccion">
           <Properties>
@@ -277,7 +257,6 @@
             <Property name="text" type="java.lang.String" value="Ingresar Evaluaci&#xf3;n"/>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ingresarEvaluacionButtonMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ingresarEvaluacionButtonActionPerformed"/>
           </Events>
         </Component>
