--- a/EvaluacionProveedores/src/View/GestorPresupuesto.form
+++ b/EvaluacionProveedores/src/View/GestorPresupuesto.form
@@ -59,7 +59,7 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane1" pref="312" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="316" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jButton4" min="-2" max="-2" attributes="0"/>
@@ -150,7 +150,7 @@
                       <Component id="jButton3" alignment="0" max="32767" attributes="1"/>
                       <Component id="jButton5" alignment="0" max="32767" attributes="1"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="12" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
