--- a/EvaluacionProveedores/src/Frontera/AdministrarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/AdministrarProveedor.form
@@ -202,7 +202,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="TFNombreEliminar" alignment="0" max="32767" attributes="1"/>
-                                  <Component id="TFNombreNit" alignment="0" min="-2" pref="223" max="-2" attributes="1"/>
+                                  <Component id="TFNitEliminar" alignment="0" min="-2" pref="223" max="-2" attributes="1"/>
                                   <Component id="BtnVerEliminar" alignment="1" min="-2" pref="67" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -225,7 +225,7 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblNitEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="TFNombreNit" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TFNitEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -262,7 +262,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="TFNombreEliminar">
             </Component>
-            <Component class="javax.swing.JTextField" name="TFNombreNit">
+            <Component class="javax.swing.JTextField" name="TFNitEliminar">
             </Component>
             <Component class="javax.swing.JButton" name="BtnVerEliminar">
               <Properties>
